# RustFundamentalCollabo

./: .gitignore  License.md  README.md
RustGrammar/Closure/: Cargo.toml
RustGrammar/Dispatching/: Cargo.toml
RustGrammar/ErrorHandling/: Cargo.toml  readme.md
RustGrammar/FileHandling/: Cargo.toml  output.txt
RustGrammar/FmtDisplay/: Cargo.toml
RustGrammar/FromStr/: Cargo.toml
RustGrammar/Generics/: Cargo.toml
RustGrammar/Hashmap/: readme.md
RustGrammar/Iterator/: readme.md
RustGrammar/Ownership/: Readme.md
RustGrammar/Rand/: Cargo.toml
RustGrammar/ReadFile/: Cargo.toml
RustGrammar/Serial_Deserial/: Cargo.toml  person.json  profile.json
RustGrammar/StdMacro/: Cargo.toml
RustGrammar/String_understanding/: Cargo.toml  readme.md
RustGrammar/TraitObjects/: Cargo.toml
RustGrammar/Vector/: Cargo.toml  readme.md
RustGrammar/benchmarking/: Cargo.toml
RustGrammar/generic_lifetime_parameter/: Cargo.toml
RustGrammar/impl_iterator/: Cargo.toml
RustGrammar/testing_some/: Cargo.toml
RustGrammar/testing_some2/: Cargo.toml
RustGrammar/traits/: animal.rs  readme.md
algorithm/LinkedList/: Cargo.toml
library_study/chatApp/: Cargo.toml
library_study/eframe/: Cargo.toml
library_study/eframe/src/: main.rs
project/: Cargo.toml  poem.txt
project/Explicit_Annotation/: Cargo.toml
project/LinearAlgebra/: Cargo.toml
project/WordFinder/: asdf  test kevin
project/cli_clap2/: Cargo.toml
project/cli_clap_basic/: Cargo.toml
project/src/: main.rs
project/testApp/: Cargo.toml
small_app/WordFinder/: asdf  (+2 more)
small_app/spa_myapp/: Cargo.toml
(+153 files in other folders)
