[package]
name = "eframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = " 0.20.1"
serde = { version = "1", features = ["derive"], optional = true }
syntect = { version = "4.6.0", optional = true }

[features]
# syntax_highlighting = ["syntect"]
